deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: wms-dev
  name: deployment-wms-user-portal
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: wms-user-portal
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: wms-user-portal
    spec:
      containers:
      - image: 737513220802.dkr.ecr.ap-southeast-1.amazonaws.com/wms-user-portal:latest
        imagePullPolicy: Always
        name: wms-user-portal
        ports:
        - containerPort: 8080
