deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: wms-dev
  name: service-wms-user-portal
spec:
  ports:
    - name: "http"
      port: 8080
      targetPort: 8080
  selector:
    app.kubernetes.io/name: wms-user-portal
