deployment/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: wms-dev
  name: ingress-wms-user-portal
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: service-wms-user-portal
              servicePort: 8080
